# Novacoin

./: AGENTS.md  CMakeLists.txt  README.md  elit21_chainstate.py  elit21_cli.py  elit21_tx.py  elit21_util.py  elit21_wallet.py  elit21d.py
build-aux/: README.md
cmake/: NovacoinTargets.cmake
contrib/: README.md
depends/: README.md
doc/: README.md
doc/release-notes/: README.md
docs/: roadmap-missing.md
docs/additional-files/: notes-01.md  notes-02.md  notes-03.md  notes-04.md  notes-05.md  notes-06.md  notes-07.md  notes-08.md  notes-09.md  notes-10.md  notes-11.md  notes-12.md  notes-13.md  notes-14.md  notes-15.md  notes-16.md  notes-17.md  notes-18.md  notes-19.md  notes-20.md  notes-21.md  notes-22.md  notes-23.md  notes-24.md  notes-25.md
docs/architecture/: PROJECT_STRUCTURE.md  bitcoin-core-parity.md  component-delivery-plan.md  protocol-spec-v1.md
docs/casino-crypto-site/: app.js  index.html  styles.css
include/: block.hpp  blockchain.hpp  consensus.hpp  transaction.hpp
include/consensus/: chain_params.hpp
include/core/: build_info.hpp
include/mempool/: policy.hpp
include/network/: p2p_node.hpp  p2p_protocol.hpp  peer_manager.hpp  seed_registry.hpp
include/rpc/: rpc_context.hpp  rpc_dispatcher.hpp  rpc_server.hpp  rpc_types.hpp
include/storage/: block_storage.hpp  chain_snapshot.hpp
include/utils/: logger.hpp
include/validation/: block_validator.hpp
include/wallet/: wallet.hpp  wallet_dat_codec.hpp  wallet_dat_loader.hpp  wallet_dat_writer.hpp  wallet_profile.hpp
m4/: README.md
share/: README.md
share/examples/: README.md
share/rpcauth/: README.md
src/: block.cpp  blockchain.cpp  main.cpp  transaction.cpp
src/apps/: novacoin-cli.cpp  novacoin-regtest.cpp  novacoin-tx.cpp  novacoin-wallet.cpp  novacoind.cpp
src/consensus/: chain_params.cpp
src/core/: build_info.cpp
src/mempool/: policy.cpp
test/: README.md
tests/: blockchain_tests.cpp  platform_modules_tests.cpp
(+21 files in other folders)
